Fix spacing around titles

--- a/locationDashboards/styling.css
+++ b/locationDashboards/styling.css
@@ -40,7 +40,7 @@ body {
 
 #sideMenu {
     background-color: #3776C3;
-    grid-row: 1/3;
+    grid-row: 1/2;
     grid-column: 1/2;
     grid-template-rows: 50px .5fr 1fr;
     gap: 15px;
@@ -84,9 +84,8 @@ body {
 
 
 #contentsMenu {
-    grid-template-columns: 2fr .75fr;
-    gap: 15px;
     padding: 20px;
+    grid-column: 1/3;
 }
 
 #contentsMenu > * {
@@ -94,12 +93,12 @@ body {
 }
 
 #classList {
-    grid-template-columns: 2fr 2fr;
+    grid-template-columns: 2fr 2fr 2fr;
     gap: 15px;
     padding: 20px;
 }
 
-#englishClassList, #computerClassList, #announcementsTitle {
+#lowBeginner,#highBeginner,#intermediate {
     display: flex;
     flex-direction: column;
     gap: 15px;
